# Ledgerlens-core

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MIGRATION_NOTES.md  Makefile  README.md  cli.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_pipeline.py  toxiproxy.json
.github/workflows/: chaos.yml  ci.yml  docs.yml  release-please.yml
api/: admin_router.py  analyst.py  auth.py  batch_router.py  export_router.py  main.py  namespace.py  ws_router.py
benchmarks/: benchmark_scoring.py  horizon_checkpoint.py
config/: settings.py
detection/: adversarial_attack.py  amm_engine.py  analyst_store.py  benford_engine.py  causal_engine.py  compliance_exporter.py  conformal.py  counterfactual_constraints.py  cross_chain_linker.py  cross_pair_engine.py  dataset.py  dispute_store.py  drift_monitor.py  ensemble_reweighter.py  feature_engineering.py  feature_store.py  feedback_store.py  gnn_model.py  governance.py  mlflow_tracker.py  model_inference.py  model_registry.py  model_signing.py  model_training.py  path_payment_engine.py  risk_score.py  robustness_eval.py  rolling_window.py  sandwich_engine.py  sar_narrative.py  shadow_scorer.py  shap_explainer.py  soroban_publisher.py  storage.py  suppressions.py  temporal_dataset.py  temporal_model.py  tracing.py  zk_commitment.py
detection/federated/: fl_model.py  krum.py  privacy_utils.py  server.py
detection/red_team/: __init__.py  attacker.py  evasion_logger.py  runner.py
docs/: api_reference.md  api_versioning.md  benford_stratification.md  byzantine_resilience.md  causal_inference.md  cli_reference.md  cross_chain_detection.md  database_schema.md  ensemble_stacking.md  feature_store.md  governance_protocol.md  hyperparameter_optimization.md  index.md  ingestion.md  model_signing.md  openapi.md  performance_monitoring.md  soroban_operations.md  streaming_scorer.md  temporal_model.md  testing_guide.md  uncertainty_quantification.md  webhook_security_model.md
docs/api/: api.md  detection.md  ingestion.md
drift_reports/: 20260620_1032.json  20260620_1039.json
helm/ledgerlens/: values.yaml
ingestion/: amm_loader.py  bridge_loader.py  checkpoint.py  curve_adapter.py  data_models.py  evm_loader.py  graph_builder.py  historical_loader.py  horizon_streamer.py  http_client.py  operations_loader.py  path_payment_loader.py  uniswap_adapter.py
storage/: retention.py
tests/: benchmark_feature_store.py  conftest.py  factories.py  test_adaptive_benford_window.py  test_adversarial_attack.py  test_analyst_dashboard.py  test_api.py  test_benchmark_regression_check.py  test_benford.py  test_benford_engine.py  test_benford_stream_counter.py  test_bridge_integrity.py  test_bridge_loader.py  test_causal_dag_engine.py  test_causal_engine.py  test_circuit_breaker.py  test_cli.py  test_compliance_exporter.py  test_config_validation.py  test_cross_chain_features.py  test_cross_chain_linker.py  test_cursor_checkpoint.py  test_curve_adapter.py  test_data_models.py  test_dispute_store.py  test_ed25519_model_signing.py  test_ensemble_reweighter.py  test_ensemble_stacking.py  test_evm_address_validation.py  test_evm_loader.py  test_feature_store.py  test_feature_store_cold.py  test_feature_store_redis.py  test_features.py  test_feedback_store.py  test_gnn_integration.py  test_gnn_model.py  test_governance.py  test_graph_builder.py  test_graph_engine.py  (+32 more)
tests/chaos/: __init__.py  conftest.py  test_circuit_breaker.py  test_horizon_latency.py  test_redis_fallback.py  test_sqlite_wal_lock.py
tests/e2e/: conftest.py  test_alert_flow.py  test_federated_e2e.py  test_federated_round.py  (+1 more)
utils/: circuit_breaker.py
(+2 files in other folders)
