[project]
name = "ledgerlens-core"
version = "0.1.0"
description = "Benford's Law + ensemble ML wash-trading detection engine for the Stellar DEX"
requires-python = ">=3.10"

[project.scripts]
ledgerlens = "cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmarks (excluded from standard CI; run with -m benchmark)",
]
filterwarnings = [
    "ignore::UserWarning:sklearn.utils.parallel",
    "ignore:.*sklearn.utils.parallel.*:UserWarning",
    "ignore:`sklearn.utils.parallel.delayed`.*:UserWarning",
]

[tool.mutmut]
paths = ["detection/benford_engine.py", "detection/graph_engine.py", "detection/model_inference.py"]
tests_dir = "tests"

[tool.ruff]
line-length = 100
target-version = "py310"
